# wgpu-marching-cubes

./: Cargo.toml  README.md
ch01/: shader_frag.wgsl  shader_vert.wgsl
ch02/implicit_surface/: app.rs  implicit_func.wgsl  implicit_surface.wgsl  implicit_value.wgsl  main.rs  state.rs
ch03/metaball/: app.rs  main.rs  metaball_comp.wgsl  metaball_value.wgsl  state.rs
src/: lib.rs  marching_cubes_table.rs  wgpu_simplified.rs
