[package]
name = "wgpu_marching_cubes"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bytemuck = { version = "1.24.0", features = [ "derive" ] }
cgmath = "0.18.0"
env_logger = "0.11.8"
log = "0.4.28"
nanorand = "0.8.0"
num = "0.4.3"
pollster = "0.4.0"
rand = "0.9.2"
wgpu = "27.0.1"
winit = "0.30.12"

#futures = "0.3"
#gfx-hal = "0.9"
#image = "0.23"

[[example]]
name = "implicit_surface"
path = "ch02/implicit_surface/main.rs"

[[example]]
name = "metaball"
path = "ch03/metaball/main.rs"
